New HTML: fix overly zealous nav-area check
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2839 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -2289,7 +2289,8 @@ body.draft {
     }
 
     #_logo {
-        margin: 22px 10px 22px 53px;
+        margin-right: 10px;
+        margin-left: 53px;
     }
     
     #_toolbar .active .bubble-corner {
