New HTML: further improve single-HTML bubbles
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2841 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -2300,18 +2300,16 @@ body.draft {
         background-color: #333;
         border-bottom: 1px solid #FFF;
         color: #FFF;
+        padding: 0 10px;
     }
 
-    #_header .crumbs.active .single-crumb a {
-        margin: 10px;
-    }
     #_header .crumbs.active .book2-icon {
         background-position: -72px -87px;
         width: 24px;
         height: 24px;
         float: right;
         margin-top: 5px;
-        margin-right: 5px;
+        margin-right: 20px;
     }
 
     #_header .crumbs {
@@ -2334,7 +2332,6 @@ body.draft {
         height: auto;
         z-index: 7;
         height: 100%;
-        overflow-y: scroll;
     }
 
     #_bubble-toc {
@@ -2344,6 +2341,10 @@ body.draft {
         top: 45px;
         overflow: hidden;
         padding-bottom: 5px;
+    }
+
+    #_toc-bubble-wrap #_bubble-toc {
+        top: 35px;
     }
 
     #_bubble-toc ol, #_bubble-toc .active ol {
