Make chapter titles bearable (thanks to Frank for the report)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2888 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -23,10 +23,11 @@ menu, nav, output, section, summary, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -1228,6 +1229,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     font-size: 16px;
     font-weight: normal;
     padding: 10px 0 20px;
+    margin: 0;
     line-height: 120%;
     width: 100%;
     clear: both;
