DAPS CSS: procedures should be blue too
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3010 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/susebooks.css
+++ b/xslt_suse2/static-daps/css/susebooks.css
@@ -1875,13 +1875,13 @@ a:hover code, a:focus code, a:active code {
 }
 
 .procedure-contents {
-    border-left: 3px solid #9CC897;
+    border-left: 3px solid #8CA4C0;
     font-weight: normal;
     margin: 17px 0 17px;
     /* Up top, 3px pf padding look better than 5 would (with line-height interfering etc.).
     On the left, we use 5px-3px of border, so it sits right there with any other lists etc. */
     padding: 3px 5px 6px 2px;
-    background-color: #F7FAF6;
+    background-color: #F6F8FA;
     display: block;
 }
 
