New HTML: more information about product name and versions
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3049 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/susebooks.css
+++ b/xslt_suse2/static-daps/css/susebooks.css
@@ -1138,7 +1138,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     display: none;
 }
 
-.version-info {
+div.version-info {
     color: #3465A4;
     font-weight: normal;
     background-color: rgba(255,255,255,0.7);
@@ -1150,7 +1150,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     border-radius: 3px;
 }
 
-.single .version-info {
+.single div.version-info {
     position: relative;
     top: 70px;
 }
