--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1166,7 +1166,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     display: none;
 }
 
-.version-info {
+div.version-info {
     color: #439539;
     font-weight: normal;
     background-color: rgba(255,255,255,0.7);
@@ -1178,7 +1178,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     border-radius: 3px;
 }
 
-.single .version-info {
+.single div.version-info {
     position: relative;
     top: 70px;
 }
