New HTML: add more prominent product version/name information to more places
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3066 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1183,6 +1183,20 @@ div.version-info {
     top: 70px;
 }
 
+h6.version-info {
+    margin: 75px 0 0;
+    padding: 5px 7px;
+    font-size: 24px;
+    color: #FFF;
+    background-color: #76AD2D;
+    float: left;
+}
+
+.book h6.version-info + div h1.title, .article h6.version-info + div h1.title,
+.set h6.version-info + div h1.title {
+    padding-top: 0;
+}
+
 .book .title, .set .title, .article .title {
     font-size: 48px;
     font-weight: 600;
