--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1075,6 +1075,9 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     margin: 0 auto -80px;
 }
 
+.nofooter #_outer-wrap {
+    margin: 0 auto;
+}
 
 /* Footer contents */
 
@@ -2540,6 +2543,10 @@ body.draft {
 
     #_outer-wrap {
         margin: 0 auto -155px;
+    }
+
+    .nofooter #_outer-wrap {
+        margin: 0 auto;
     }
 
     #_content ul, #_content ol {
