New HTML: set mobile CSS from 480px instead of 450px (seems more usual), make Social buttons a bit nicer when scaling window down
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3112 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/susebooks.css
+++ b/xslt_suse2/static-daps/css/susebooks.css
@@ -2172,6 +2172,17 @@ body.draft {
 
 }
 
+@media only screen and (max-width: 800px) {
+    .share {
+        float: right;
+    }
+
+    .print {
+        clear: both;
+        margin-top: 20px;
+    }
+}
+
 @media only screen and (max-width: 700px) {
     .find-form {
         margin: 0 0 0 -72.5px;
@@ -2253,7 +2264,7 @@ body.draft {
 }
 
 /* Mobile layout */
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 480px) {
     #_toc-area, #_nav-area {
         width: 100%;
     }
