New CSS: Fix tiny color bug in DAPS stylesheet
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3127 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/susebooks.css
+++ b/xslt_suse2/static-daps/css/susebooks.css
@@ -1024,7 +1024,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 #_bottom-navigation .nav-link:hover .nav-label,
 #_bottom-navigation .nav-link:focus .nav-label,
 #_bottom-navigation .nav-link:active .nav-label {
-    color: #439539;
+    color: #204A87;
 }
 
 #_share-print {
