New HTML: add semi-working version of back button
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3132 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -37,7 +37,6 @@ a {
     text-decoration: none;
 }
 
-
 /* PAGE BOILERPLATE AND NAVIGATION */
 
 /* Common */
@@ -225,6 +224,20 @@ html, body {
     padding: 0;
     display: inline-block;
     vertical-align: middle;
+}
+
+#_header .crumbs a.back-to-overview-link {
+    display: inline-block;
+    height: 36px;
+    width: 24px;
+    margin-right: -16px;
+    vertical-align: middle;
+    background-image: url(../images/icons.png);
+    background-position: -360px 0px;
+}
+
+#_header .crumbs a.back-to-overview-link:hover {
+    background-position: -360px -36px;
 }
 
 .book-icon, .toc-icon, .find-icon, .tools-icon {
