New HTML: back links/something to try
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3136 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -231,6 +231,10 @@ html, body {
     height: 36px;
     width: 24px;
     margin-right: -16px;
+    -webkit-transition: margin-right 0.1s ease-in-out;
+    -moz-transition: margin-right 0.1s ease-in-out;
+    -o-transition: margin-right 0.1s ease-in-out;
+    transition: margin-right 0.1s ease-in-out;
     vertical-align: middle;
     background-image: url(../images/icons.png);
     background-position: -360px 0px;
@@ -238,6 +242,11 @@ html, body {
 
 #_header .crumbs a.back-to-overview-link:hover {
     background-position: -360px -36px;
+    margin-right: -12px;
+    -webkit-transition: margin-right 0.1s ease-in-out;
+    -moz-transition: margin-right 0.1s ease-in-out;
+    -o-transition: margin-right 0.1s ease-in-out;
+    transition: margin-right 0.1s ease-in-out;
 }
 
 .book-icon, .toc-icon, .find-icon, .tools-icon {
