--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -181,6 +181,18 @@ html, body {
     margin: 0 0 0 5px;
 }
 
+#_header .crumbs .lower-level {
+    margin: 0;
+}
+
+#_fixed-header .crumbs a {
+    padding: 0 3px;
+}
+
+#_fixed-header .crumbs a:first-child {
+    padding: 0 3px 0 0;
+}
+
 .crumbs span {
     color: #666;
 }
@@ -201,7 +213,8 @@ html, body {
     padding: 0 10px 0 0;
     margin: 0 0 0 10px;
     height: 36px;
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     background-color: #EFEFF0;
     border-radius: 18px;
 }
@@ -216,7 +229,7 @@ html, body {
     color: #FFF;
 }
 
-#_header .crumbs .book2-icon {
+#_header .crumbs .single-contents-icon {
     width: 36px;
     height: 36px;
     background-position: -36px 0px;
@@ -226,35 +239,12 @@ html, body {
     vertical-align: middle;
 }
 
-#_header .crumbs a.back-to-overview-link {
-    display: inline-block;
-    height: 36px;
-    width: 24px;
-    margin-right: -16px;
-    -webkit-transition: margin-right 0.1s ease-in-out;
-    -moz-transition: margin-right 0.1s ease-in-out;
-    -o-transition: margin-right 0.1s ease-in-out;
-    transition: margin-right 0.1s ease-in-out;
-    vertical-align: middle;
-    background-image: url(../images/icons.png);
-    background-position: -360px 0px;
-}
-
-#_header .crumbs a.back-to-overview-link:hover {
-    background-position: -360px -36px;
-    margin-right: -12px;
-    -webkit-transition: margin-right 0.1s ease-in-out;
-    -moz-transition: margin-right 0.1s ease-in-out;
-    -o-transition: margin-right 0.1s ease-in-out;
-    transition: margin-right 0.1s ease-in-out;
-}
-
-.book-icon, .toc-icon, .find-icon, .tools-icon {
+.book-icon, .overview-icon, .toc-icon, .find-icon, .tools-icon {
     display: block;
 }
 
-.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon,
-#_find-button, .ulink:after, .bubble-corner, .book2-icon,
+.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, .overview-icon,
+#_find-button, .ulink:after, .bubble-corner, .single-contents-icon,
 #_print-button:before, #_share-fb:before, #_share-gp:before, #_share-tw:before,
 #_share-mail:before, .arch-arrow-start, .arch-arrow-end  {
     background-image: url(../images/icons.png);
@@ -262,30 +252,33 @@ html, body {
 }
 
 /* A somewhat ugly trick to make the documents look okay even without stylesheet. */
-.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, #_find-button {
+.toc-icon, .overview-icon, .find-icon, .book-icon, .prev-icon, .next-icon,
+#_find-button {
     overflow: hidden;
     height: 0 !important;
 }
 
-.toc-icon, .find-icon, #_header .book-icon, #_toolbar .prev-icon,
-#_toolbar .next-icon, #_find-button, #_bottom-navigation .prev-icon,
-#_bottom-navigation .next-icon {
+.toc-icon, .find-icon, #_header .book-icon, #_header .overview-icon,
+#_toolbar .prev-icon, #_toolbar .next-icon, #_find-button,
+#_bottom-navigation .prev-icon, #_bottom-navigation .next-icon {
     padding: 36px 0 0;
 }
 
-#_fixed-header .book-icon, #_fixed-header .prev-icon, #_fixed-header .next-icon {
+#_fixed-header .book-icon,#_fixed-header .overview-icon,
+#_fixed-header .prev-icon, #_fixed-header .next-icon {
     padding: 15px 0 0;
 }
 /* End ugliness. */
 
 
-#_header .book-link {
+#_header .book-link, #_header .overview-icon {
     display: inline-block;
     vertical-align: middle;
     height: 36px;
 }
 
-.toc-icon, .find-icon, #_header .book-icon, #_toolbar .prev-icon, #_toolbar .next-icon {
+.toc-icon, .find-icon, #_header .book-icon, #_header .overview-icon,
+#_toolbar .prev-icon, #_toolbar .next-icon {
     width: 36px;
 }
 
@@ -298,15 +291,38 @@ html, body {
     background-position: 0px -36px;
 }
 
+#_header .book-icon.lower-level {
+    background-position: -108px 0px;
+}
+
+#_header a:hover .book-icon.lower-level, #_header a:focus .book-icon.lower-level,
+#_header a:active .book-icon.lower-level {
+    background-position: -108px -36px;
+}
+
+#_header .overview-icon {
+    background-position: -72px 0px;
+}
+
+#_header a:hover .overview-icon, #_header a:focus .overview-icon,
+#_header a:active .overview-icon {
+    background-position: -72px -36px;
+}
+
 #_fixed-header .crumbs span, #_fixed-header .crumbs a {
     display: block;
     float: left;
 }
 
+#_fixed-header .book-icon, #_fixed-header .overview-icon,
+#_fixed-header .single-contents-icon {
+    width: 18px;
+    margin: 1px 0;
+}
+
+
 #_fixed-header .book-icon {
     background-position: 0px -72px;
-    margin: 1px 0;
-    width: 18px;
 }
 
 #_fixed-header a:hover .book-icon, #_fixed-header a:focus .book-icon,
@@ -314,25 +330,32 @@ html, body {
     background-position: -18px -72px;
 }
 
-#_fixed-header .book2-icon {
-    width: 18px;
-    height: 15px;
-    margin: 1px 0;
-    background-position: -199px -72px;
+#_fixed-header .overview-icon {
+    background-position: -36px -72px;
 }
 
-.inactive #_fixed-header a:hover .book2-icon, .inactive #_fixed-header a:focus .book2-icon,
-.inactive #_fixed-header a:active .book2-icon {
-    background-position: -217px -72px;
+#_fixed-header a:hover .overview-icon, #_fixed-header a:focus .overview-icon,
+#_fixed-header a:active .overview-icon {
+    background-position: -54px -72px;
 }
 
-.active #_fixed-header .book2-icon {
+#_fixed-header .single-contents-icon {
     background-position: -235px -72px;
+    height: 15px;
 }
 
-.active #_fixed-header a:hover .book2-icon, .active #_fixed-header a:focus .book2-icon,
-.active #_fixed-header a:active .book2-icon{
+.inactive #_fixed-header a:hover .single-contents-icon, .inactive #_fixed-header a:focus .single-contents-icon,
+.inactive #_fixed-header a:active .single-contents-icon {
     background-position: -253px -72px;
+}
+
+.active #_fixed-header .single-contents-icon {
+    background-position: -271px -72px;
+}
+
+.active #_fixed-header a:hover .single-contents-icon, .active #_fixed-header a:focus .single-contents-icon,
+.active #_fixed-header a:active .single-contents-icon{
+    background-position: -289px -72px;
 }
 
 
@@ -540,49 +563,49 @@ html, body {
 }
 
 .toc-icon {
-    background-position: -72px 0px;
+    background-position: -144px 0px;
 }
 
 
 .active .toc-icon, a:hover .toc-icon, a:focus .toc-icon, a:active .toc-icon {
-    background-position: -72px -36px;
+    background-position: -144px -36px;
 }
 
 .find-icon {
-    background-position: -108px 0px;
+    background-position: -180px 0px;
 }
 
 
 .active .find-icon, a:hover .find-icon, a:focus .find-icon, a:active .find-icon {
-    background-position: -108px -36px;
-}
-
-#_toolbar a.tool-spacer .prev-icon {
-    background-position: -180px 0px;
-}
-
-#_toolbar span.tool-spacer .prev-icon {
-    background-position: -252px 0px;
-}
-
-#_toolbar a:hover .prev-icon, #_toolbar a:focus .prev-icon, #_toolbar a:active .prev-icon {
     background-position: -180px -36px;
 }
 
-#_toolbar a.tool-spacer .next-icon {
-    background-position: -216px 0px;
+#_toolbar a.tool-spacer .prev-icon {
+    background-position: -252px 0px;
 }
 
-#_toolbar span.tool-spacer .next-icon {
+#_toolbar span.tool-spacer .prev-icon {
+    background-position: -324px 0px;
+}
+
+#_toolbar a:hover .prev-icon, #_toolbar a:focus .prev-icon, #_toolbar a:active .prev-icon {
     background-position: -252px -36px;
 }
 
+#_toolbar a.tool-spacer .next-icon {
+    background-position: -288px 0px;
+}
+
+#_toolbar span.tool-spacer .next-icon {
+    background-position: -324px -36px;
+}
+
 #_toolbar a:hover .next-icon, #_toolbar a:focus .next-icon, #_toolbar a:active .next-icon {
-    background-position: -216px -36px;
+    background-position: -288px -36px;
 }
 
 .bubble-corner {
-    background-position: -288px -72px;
+    background-position: -324px -72px;
     width: 36px;
     height: 15px;
     position: relative;
@@ -792,21 +815,21 @@ html, body {
 }
 
 #_find-input:focus + #_find-button {
-    background-position: -108px 0px !important;
+    background-position: -180px 0px !important;
 }
 
 #_find-button {
     width: 36px;
     display: block;
     margin: 0 0 0 -18px;
-    background-position: -108px 0px;
+    background-position: -180px 0px;
     float: left;
     border: 0;
     background-color: transparent;
 }
 
 #_find-input:focus + #_find-button:hover, #_find-button:active {
-    background-position: -108px -36px !important;
+    background-position: -180px -36px !important;
 }
 
 button:focus::-moz-focus-inner, button::-moz-focus-inner {
@@ -890,27 +913,27 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 }
 
 #_fixed-header a.tool-spacer .prev-icon {
-    background-position: -36px -72px;
+    background-position: -72px -72px;
 }
 
 #_fixed-header span.tool-spacer .prev-icon {
-    background-position: -144px -72px;
+    background-position: -180px -72px;
 }
 
 #_fixed-header a:hover .prev-icon, #_fixed-header a:focus .prev-icon, #_fixed-header a:active .prev-icon {
-    background-position: -54px -72px;
+    background-position: -90px -72px;
 }
 
 #_fixed-header a.tool-spacer .next-icon {
-    background-position: -108px -72px;
+    background-position: -144px -72px;
 }
 
 #_fixed-header span.tool-spacer .next-icon {
-    background-position: -162px -72px;
+    background-position: -198px -72px;
 }
 
 #_fixed-header a:hover .next-icon, #_fixed-header a:focus .next-icon, #_fixed-header a:active .next-icon {
-    background-position: -126px -72px;
+    background-position: -162px -72px;
 }
 
 /* Page bottom */
@@ -942,20 +965,20 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 }
 
 #_bottom-navigation .prev-icon {
-    background-position: -288px 0;
+    background-position: -360px 0;
 }
 
 #_bottom-navigation .nav-link:hover .prev-icon  {
-    background-position: -288px -36px;
+    background-position: -360px -36px;
 }
 
 
 #_bottom-navigation .next-icon {
-    background-position: -324px 0;
+    background-position: -396px 0;
 }
 
 #_bottom-navigation .nav-link:hover .next-icon {
-    background-position: -324px -36px;
+    background-position: -396px -36px;
 }
 
 
@@ -1024,7 +1047,6 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     background-color: #666;
     background-position: -235px -88px;
 }
-
 
 #_print-button:before {
     background-color: #666;
@@ -1176,14 +1198,14 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     height: 15px;
     display: inline-block;
     text-decoration: none;
-    background-position: -180px -72px;
+    background-position: -216px -72px;
     background-repeat: no-repeat;
     position: relative;
     top: 2px;
 }
 
 .legalnotice .ulink:after {
-    background-position: -180px -101px;
+    background-position: -216px -101px;
     width: 18px;
     height: 10px;
 }
@@ -2272,12 +2294,11 @@ body.draft {
     }
 
     #_find-input:focus + #_find-button {
-        background-position: -72px -72px !important;
+        background-position: -108px -72px !important;
     }
 
-
     #_find-input:focus + #_find-button:hover {
-        background-position: -90px -72px !important;
+        background-position: -126px -72px !important;
     }
 
     #_find-input-label {
@@ -2380,7 +2401,7 @@ body.draft {
         padding: 0 10px;
     }
 
-    #_header .crumbs.active .book2-icon {
+    #_header .crumbs.active .single-contents-icon {
         background-position: -72px -87px;
         width: 24px;
         height: 24px;
@@ -2399,8 +2420,8 @@ body.draft {
         margin-left: 53px;
     }
 
-    #_header .book2-icon:hover, #_header .book2-icon:focus,
-    #_header .book2-icon:active {
+    #_header .single-contents-icon:hover, #_header .single-contents-icon:focus,
+    #_header .single-contents-icon:active {
         background-position: -36px -36px;
     }
 
