New HTML: make license texts smaller, fix the bug that license texts were shown too wide in normal HTML
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3224 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/susebooks.css
+++ b/xslt_suse2/static/css/susebooks.css
@@ -1254,6 +1254,7 @@ h6.version-info {
     color: #439539;
     padding: 70px 0 50px;
 }
+
 .book .title .citetitle, .set .title .citetitle,
 .article .title .citetitle {
     font-style: normal;
@@ -1342,6 +1343,24 @@ h6.version-info {
 
 .sect5 .title, .section .section .section .section .section .title {
     font-weight: normal;
+}
+
+.legal-section p {
+    color: #333 !important;
+    font-size: 12px !important;
+}
+
+.legal-section .screen {
+    color: #666 !important;
+    font-size: 11px !important;
+}
+
+.legal-section .sect2 .title {
+    font-size: 16px;
+}
+
+.legal-section .sect3 .title {
+    font-size: 12px;
 }
 
 .name, .refentry h2, .refentrytitle a, h2, .indexdiv h3, .qandadiv-title,
