--- a/xslt_suse2/static-daps/css/susebooks.css
+++ b/xslt_suse2/static-daps/css/susebooks.css
@@ -37,7 +37,6 @@ a {
     text-decoration: none;
 }
 
-
 /* PAGE BOILERPLATE AND NAVIGATION */
 
 /* Common */
@@ -182,6 +181,18 @@ html, body {
     margin: 0 0 0 5px;
 }
 
+#_header .crumbs .lower-level {
+    margin: 0;
+}
+
+#_fixed-header .crumbs a {
+    padding: 0 3px;
+}
+
+#_fixed-header .crumbs a:first-child {
+    padding: 0 3px 0 0;
+}
+
 .crumbs span {
     color: #666;
 }
@@ -202,7 +213,8 @@ html, body {
     padding: 0 10px 0 0;
     margin: 0 0 0 10px;
     height: 36px;
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     background-color: #EFEFF0;
     border-radius: 18px;
 }
@@ -217,7 +229,7 @@ html, body {
     color: #FFF;
 }
 
-#_header .crumbs .book2-icon {
+#_header .crumbs .single-contents-icon {
     width: 36px;
     height: 36px;
     background-position: -36px 0px;
@@ -227,12 +239,12 @@ html, body {
     vertical-align: middle;
 }
 
-.book-icon, .toc-icon, .find-icon, .tools-icon {
+.book-icon, .overview-icon, .toc-icon, .find-icon, .tools-icon {
     display: block;
 }
 
-.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon,
-#_find-button, .ulink:after, .bubble-corner, .book2-icon,
+.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, .overview-icon,
+#_find-button, .ulink:after, .bubble-corner, .single-contents-icon,
 #_print-button:before, #_share-fb:before, #_share-gp:before, #_share-tw:before,
 #_share-mail:before, .arch-arrow-start, .arch-arrow-end  {
     background-image: url(../images/icons.png);
@@ -240,30 +252,33 @@ html, body {
 }
 
 /* A somewhat ugly trick to make the documents look okay even without stylesheet. */
-.toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, #_find-button {
+.toc-icon, .overview-icon, .find-icon, .book-icon, .prev-icon, .next-icon,
+#_find-button {
     overflow: hidden;
     height: 0 !important;
 }
 
-.toc-icon, .find-icon, #_header .book-icon, #_toolbar .prev-icon,
-#_toolbar .next-icon, #_find-button, #_bottom-navigation .prev-icon,
-#_bottom-navigation .next-icon {
+.toc-icon, .find-icon, #_header .book-icon, #_header .overview-icon,
+#_toolbar .prev-icon, #_toolbar .next-icon, #_find-button,
+#_bottom-navigation .prev-icon, #_bottom-navigation .next-icon {
     padding: 36px 0 0;
 }
 
-#_fixed-header .book-icon, #_fixed-header .prev-icon, #_fixed-header .next-icon {
+#_fixed-header .book-icon,#_fixed-header .overview-icon,
+#_fixed-header .prev-icon, #_fixed-header .next-icon {
     padding: 15px 0 0;
 }
 /* End ugliness. */
 
 
-#_header .book-link {
+#_header .book-link, #_header .overview-icon {
     display: inline-block;
     vertical-align: middle;
     height: 36px;
 }
 
-.toc-icon, .find-icon, #_header .book-icon, #_toolbar .prev-icon, #_toolbar .next-icon {
+.toc-icon, .find-icon, #_header .book-icon, #_header .overview-icon,
+#_toolbar .prev-icon, #_toolbar .next-icon {
     width: 36px;
 }
 
@@ -276,15 +291,38 @@ html, body {
     background-position: 0px -36px;
 }
 
+#_header .book-icon.lower-level {
+    background-position: -108px 0px;
+}
+
+#_header a:hover .book-icon.lower-level, #_header a:focus .book-icon.lower-level,
+#_header a:active .book-icon.lower-level {
+    background-position: -108px -36px;
+}
+
+#_header .overview-icon {
+    background-position: -72px 0px;
+}
+
+#_header a:hover .overview-icon, #_header a:focus .overview-icon,
+#_header a:active .overview-icon {
+    background-position: -72px -36px;
+}
+
 #_fixed-header .crumbs span, #_fixed-header .crumbs a {
     display: block;
     float: left;
 }
 
+#_fixed-header .book-icon, #_fixed-header .overview-icon,
+#_fixed-header .single-contents-icon {
+    width: 18px;
+    margin: 1px 0;
+}
+
+
 #_fixed-header .book-icon {
     background-position: 0px -72px;
-    margin: 1px 0;
-    width: 18px;
 }
 
 #_fixed-header a:hover .book-icon, #_fixed-header a:focus .book-icon,
@@ -292,25 +330,32 @@ html, body {
     background-position: -18px -72px;
 }
 
-#_fixed-header .book2-icon {
-    width: 18px;
-    height: 15px;
-    margin: 1px 0;
-    background-position: -199px -72px;
+#_fixed-header .overview-icon {
+    background-position: -36px -72px;
 }
 
-.inactive #_fixed-header a:hover .book2-icon, .inactive #_fixed-header a:focus .book2-icon,
-.inactive #_fixed-header a:active .book2-icon {
-    background-position: -217px -72px;
+#_fixed-header a:hover .overview-icon, #_fixed-header a:focus .overview-icon,
+#_fixed-header a:active .overview-icon {
+    background-position: -54px -72px;
 }
 
-.active #_fixed-header .book2-icon {
+#_fixed-header .single-contents-icon {
     background-position: -235px -72px;
+    height: 15px;
 }
 
-.active #_fixed-header a:hover .book2-icon, .active #_fixed-header a:focus .book2-icon,
-.active #_fixed-header a:active .book2-icon{
+.inactive #_fixed-header a:hover .single-contents-icon, .inactive #_fixed-header a:focus .single-contents-icon,
+.inactive #_fixed-header a:active .single-contents-icon {
     background-position: -253px -72px;
+}
+
+.active #_fixed-header .single-contents-icon {
+    background-position: -271px -72px;
+}
+
+.active #_fixed-header a:hover .single-contents-icon, .active #_fixed-header a:focus .single-contents-icon,
+.active #_fixed-header a:active .single-contents-icon{
+    background-position: -289px -72px;
 }
 
 
@@ -517,49 +562,49 @@ html, body {
 }
 
 .toc-icon {
-    background-position: -72px 0px;
+    background-position: -144px 0px;
 }
 
 
 .active .toc-icon, a:hover .toc-icon, a:focus .toc-icon, a:active .toc-icon {
-    background-position: -72px -36px;
+    background-position: -144px -36px;
 }
 
 .find-icon {
-    background-position: -108px 0px;
+    background-position: -180px 0px;
 }
 
 
 .active .find-icon, a:hover .find-icon, a:focus .find-icon, a:active .find-icon {
-    background-position: -108px -36px;
-}
-
-#_toolbar a.tool-spacer .prev-icon {
-    background-position: -180px 0px;
-}
-
-#_toolbar span.tool-spacer .prev-icon {
-    background-position: -252px 0px;
-}
-
-#_toolbar a:hover .prev-icon, #_toolbar a:focus .prev-icon, #_toolbar a:active .prev-icon {
     background-position: -180px -36px;
 }
 
-#_toolbar a.tool-spacer .next-icon {
-    background-position: -216px 0px;
+#_toolbar a.tool-spacer .prev-icon {
+    background-position: -252px 0px;
 }
 
-#_toolbar span.tool-spacer .next-icon {
+#_toolbar span.tool-spacer .prev-icon {
+    background-position: -324px 0px;
+}
+
+#_toolbar a:hover .prev-icon, #_toolbar a:focus .prev-icon, #_toolbar a:active .prev-icon {
     background-position: -252px -36px;
 }
 
+#_toolbar a.tool-spacer .next-icon {
+    background-position: -288px 0px;
+}
+
+#_toolbar span.tool-spacer .next-icon {
+    background-position: -324px -36px;
+}
+
 #_toolbar a:hover .next-icon, #_toolbar a:focus .next-icon, #_toolbar a:active .next-icon {
-    background-position: -216px -36px;
+    background-position: -288px -36px;
 }
 
 .bubble-corner {
-    background-position: -288px -72px;
+    background-position: -324px -72px;
     width: 36px;
     height: 15px;
     position: relative;
@@ -769,21 +814,21 @@ html, body {
 }
 
 #_find-input:focus + #_find-button {
-    background-position: -108px 0px !important;
+    background-position: -180px 0px !important;
 }
 
 #_find-button {
     width: 36px;
     display: block;
     margin: 0 0 0 -18px;
-    background-position: -108px 0px;
+    background-position: -180px 0px;
     float: left;
     border: 0;
     background-color: transparent;
 }
 
 #_find-input:focus + #_find-button:hover, #_find-button:active {
-    background-position: -108px -36px !important;
+    background-position: -180px -36px !important;
 }
 
 button:focus::-moz-focus-inner, button::-moz-focus-inner {
@@ -867,27 +912,27 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 }
 
 #_fixed-header a.tool-spacer .prev-icon {
-    background-position: -36px -72px;
+    background-position: -72px -72px;
 }
 
 #_fixed-header span.tool-spacer .prev-icon {
-    background-position: -144px -72px;
+    background-position: -180px -72px;
 }
 
 #_fixed-header a:hover .prev-icon, #_fixed-header a:focus .prev-icon, #_fixed-header a:active .prev-icon {
-    background-position: -54px -72px;
+    background-position: -90px -72px;
 }
 
 #_fixed-header a.tool-spacer .next-icon {
-    background-position: -108px -72px;
+    background-position: -144px -72px;
 }
 
 #_fixed-header span.tool-spacer .next-icon {
-    background-position: -162px -72px;
+    background-position: -198px -72px;
 }
 
 #_fixed-header a:hover .next-icon, #_fixed-header a:focus .next-icon, #_fixed-header a:active .next-icon {
-    background-position: -126px -72px;
+    background-position: -162px -72px;
 }
 
 /* Page bottom */
@@ -919,20 +964,20 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 }
 
 #_bottom-navigation .prev-icon {
-    background-position: -288px 0;
+    background-position: -360px 0;
 }
 
 #_bottom-navigation .nav-link:hover .prev-icon  {
-    background-position: -288px -36px;
+    background-position: -360px -36px;
 }
 
 
 #_bottom-navigation .next-icon {
-    background-position: -324px 0;
+    background-position: -396px 0;
 }
 
 #_bottom-navigation .nav-link:hover .next-icon {
-    background-position: -324px -36px;
+    background-position: -396px -36px;
 }
 
 
@@ -1002,7 +1047,6 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     background-position: -235px -88px;
 }
 
-
 #_print-button:before {
     background-color: #666;
     background-position: -253px -88px;
@@ -1024,7 +1068,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 #_bottom-navigation .nav-link:hover .nav-label,
 #_bottom-navigation .nav-link:focus .nav-label,
 #_bottom-navigation .nav-link:active .nav-label {
-    color: #204A87;
+    color: #439539;
 }
 
 #_share-print {
@@ -1153,14 +1197,14 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
     height: 15px;
     display: inline-block;
     text-decoration: none;
-    background-position: -180px -72px;
+    background-position: -216px -72px;
     background-repeat: no-repeat;
     position: relative;
     top: 2px;
 }
 
 .legalnotice .ulink:after {
-    background-position: -180px -101px;
+    background-position: -216px -101px;
     width: 18px;
     height: 10px;
 }
@@ -1209,6 +1253,7 @@ h6.version-info {
     color: #3465A4;
     padding: 70px 0 50px;
 }
+
 .book .title .citetitle, .set .title .citetitle,
 .article .title .citetitle {
     font-style: normal;
@@ -1240,6 +1285,7 @@ h6.version-info {
 .single .part .title, .single .article .title {
     padding-top: 100px;
 }
+
 
 .sect1 .subtitle, .chapter .subtitle {
     font-size: 16px;
@@ -1296,6 +1342,24 @@ h6.version-info {
 
 .sect5 .title, .section .section .section .section .section .title {
     font-weight: normal;
+}
+
+.legal-section p {
+    color: #333 !important;
+    font-size: 12px !important;
+}
+
+.legal-section .screen {
+    color: #666 !important;
+    font-size: 11px !important;
+}
+
+.legal-section .sect2 .title {
+    font-size: 16px;
+}
+
+.legal-section .sect3 .title {
+    font-size: 12px;
 }
 
 .name, .refentry h2, .refentrytitle a, h2, .indexdiv h3, .qandadiv-title,
@@ -2173,7 +2237,6 @@ body.draft {
         width: auto;
         height: auto;
     }
-
 }
 
 @media only screen and (max-width: 800px) {
@@ -2249,12 +2312,11 @@ body.draft {
     }
 
     #_find-input:focus + #_find-button {
-        background-position: -72px -72px !important;
+        background-position: -108px -72px !important;
     }
 
-
     #_find-input:focus + #_find-button:hover {
-        background-position: -90px -72px !important;
+        background-position: -126px -72px !important;
     }
 
     #_find-input-label {
@@ -2280,6 +2342,7 @@ body.draft {
         clear: both;
     }
 }
+
 
 /* Mobile layout */
 @media only screen and (max-width: 480px) {
@@ -2356,7 +2419,7 @@ body.draft {
         padding: 0 10px;
     }
 
-    #_header .crumbs.active .book2-icon {
+    #_header .crumbs.active .single-contents-icon {
         background-position: -72px -87px;
         width: 24px;
         height: 24px;
@@ -2372,11 +2435,11 @@ body.draft {
 
     #_logo {
         margin-right: 10px;
-        margin-left: 63px;
+        margin-left: 53px;
     }
 
-    #_header .book2-icon:hover, #_header .book2-icon:focus,
-    #_header .book2-icon:active {
+    #_header .single-contents-icon:hover, #_header .single-contents-icon:focus,
+    #_header .single-contents-icon:active {
         background-position: -36px -36px;
     }
 
