New HTML: No need to use an image to create a triangle
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3323 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -244,7 +244,7 @@ html, body {
 }
 
 .toc-icon, .find-icon, .book-icon, .prev-icon, .next-icon, .overview-icon,
-#_find-button, .ulink:after, .bubble-corner, .single-contents-icon,
+#_find-button, .ulink:after, .single-contents-icon,
 #_print-button:before, #_share-fb:before, #_share-gp:before, #_share-tw:before,
 #_share-mail:before, .arch-arrow-start, .arch-arrow-end  {
     background-image: url(../images/icons.png);
@@ -605,12 +605,15 @@ html, body {
 
 .bubble-corner {
     background-position: -324px -72px;
-    width: 36px;
-    height: 15px;
+    width: 0;
+    height: 0;
+    border-width: 0 15px 15px;
+    border-color: transparent transparent #333;
+    border-style: solid;
     position: relative;
     z-index: 7;
     left: 50%;
-    margin: 0 0 0 -18px;
+    margin: 0 0 0 -15px;
 }
 
 .bubble {
