New HTML: fix little oversight in sharing/printing buttons
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3345 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static/css/style.css
+++ b/xslt_suse2/static/css/style.css
@@ -1070,7 +1070,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 }
 
 #_share-print .bottom-button:hover, #_share-print .bottom-button:focus,
-#_share-print span:active {
+#_share-print .bottom-button:active {
     border: 1px solid rgba(20,20,20,0.5);
     background: #DEDEDE;
 }
