New HTML/FO: Rich from Novell was using a slightly darker green, so use that too & correct some colours from the DAPS CSS
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@3347 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/static-daps/css/style.css
+++ b/xslt_suse2/static-daps/css/style.css
@@ -428,7 +428,7 @@ html, body {
 }
 
 #_pickers .bubble .selected {
-    background-color: #5E9632;
+    background-color: #4F669D;
     background-image: url(../images/tick.png);
     background-repeat: no-repeat;
     background-position: right top;
@@ -772,7 +772,7 @@ html, body {
 }
 
 #_bubble-toc .active > a {
-    background-color: #5E9632;
+    background-color: #4F669D;
     color: #FFF;
 }
 #_bubble-toc .active {
@@ -1084,7 +1084,7 @@ button:focus::-moz-focus-inner, button::-moz-focus-inner {
 #_bottom-navigation .nav-link:hover .nav-label,
 #_bottom-navigation .nav-link:focus .nav-label,
 #_bottom-navigation .nav-link:active .nav-label {
-    color: #439539;
+    color: #3465A4;
 }
 
 #_share-print {
